# rust-direnv

./: .gitmodules  .mise.toml  rust-direnv.code-workspace
.devcontainer/: devcontainer.json  setup.sh
direnv/: Cargo.toml
direnv/.cargo/: config.toml
direnv/src/: dotenv.rs  env.rs  gzenv.rs  main.rs
v-direnv/: .gitignore  v.mod
v-direnv/src/: gzenv.v
vscode-env/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
vscode-env/src/: extension.ts
