[package]
name = "direnv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "direnv"
path = "src/main.rs"

[[bin]]
name = "gzenv"
path = "src/gzenv.rs"

[dependencies]
json-syntax = "0.12.5"
sonic-rs = "0.3.9"
serde = { version = "1.0", features = ["rc", "derive"] }
rmp-serde = "1.3.0"
serde_json = "1.0.122"
flate2 = "1.0.31"
