[package]
name = "direnv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "direnv"
path = "src/main.rs"

[dependencies]
json-syntax = "0.12.5"
sonic-rs = "0.3.9"
serde = { version = "1.0", features = ["rc", "derive"] }
rmp-serde = "1.3.0"
serde_json = "1.0.122"
flate2 = "1.0.31"
bincode = "1.3.3"
indoc = "2.0.5"
regex = { version = "1.10.6", features = ["unicode", "perf", "perf-dfa", "perf-inline", "perf-literal"] }
potenv = "0.2.0"

[patch.crates-io]
potenv = { path = "../potenv" }

[dev-dependencies]
tracing = "0.1.40"
tracing-test = "0.2.5"
